--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "domchallenge",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://arman-berek.github.io/DOMChallenges3",
+  "homepage": "https://Arman-Berek.github.io/DOMChallenges3/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
